move lists of data to json script tag

--- a/portfolio-front/portfolio-react-app/index.html
+++ b/portfolio-front/portfolio-react-app/index.html
@@ -31,5 +31,93 @@
     <div id="root"></div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <script type="module" src="./src/main.jsx"></script>
+    <script id="project-images" type="application/json">
+        [{
+            "id": 0,
+            "imgSrc": "./src/assets/img/ales-nesetril-Im7lZjxeLhg-unsplash.webp"
+        }, {
+            "id": 1,
+            "imgSrc": "/src/assets/img/campaign-creators-OGOWDVLbMSc-unsplash.webp"
+        }, {
+            "id": 2,
+            "imgSrc": "/src/assets/img/christopher-gower-m_HRfLhgABo-unsplash.webp"
+        }, {
+            "id": 3,
+            "imgSrc": "/src/assets/img/domenico-loia-EhTcC9sYXsw-unsplash.webp"
+        }]
+    </script>
+    <script id="menu-links" type="application/json">
+        [{
+            "id": 0,
+            "name": "Home",
+            "url": "#"
+        }, {
+            "id": 1,
+            "name": "About",
+            "url": "#"
+        }, {
+            "id": 2,
+            "name": "Projects",
+            "url": "#"
+        }, {
+            "id": 3,
+            "name": "Contact",
+            "url": "#"
+        }]
+    </script>
+    <script id="projects" type="application/json">
+        [{
+            "id": 0,
+            "name": "Alpha",
+            "imgSrc": "src/assets/img/ales-nesetril-Im7lZjxeLhg-unsplash.webp",
+            "type": "Web",
+            "url": "#"
+        }, {
+            "id": 1,
+            "name": "Beta",
+            "imgSrc": "src/assets/img/campaign-creators-OGOWDVLbMSc-unsplash.webp",
+            "type": "Mobile",
+            "url": "#"
+        }, {
+            "id": 2,
+            "name": "Gamma",
+            "imgSrc": "src/assets/img/christopher-gower-m_HRfLhgABo-unsplash.webp",
+            "type": "Mobile",
+            "url": "#"
+        }, {
+            "id": 3,
+            "name": "Delta",
+            "imgSrc": "src/assets/img/domenico-loia-EhTcC9sYXsw-unsplash.webp",
+            "type": "Web",
+            "url": "#"
+        }, {
+            "id": 4,
+            "name": "Epsilon",
+            "imgSrc": "src/assets/img/rodion-kutsaiev-0VGG7cqTwCo-unsplash.webp",
+            "type": "Mobile",
+            "url": "#"
+        }, {
+            "id": 5,
+            "name": "Zeta",
+            "imgSrc": "src/assets/img/taras-shypka-iFSvn82XfGo-unsplash.webp",
+            "type": "Web",
+            "url": "#"
+        }]
+    </script>
+    <script id="social-links" type="application/json">
+        [{
+            "id": 0,
+            "imgSrc": "src/assets/svg/github-fill.svg",
+            "url": "#"
+        }, {
+            "id": 1,
+            "imgSrc": "src/assets/svg/linkedin-fill.svg",
+            "url": "#"
+        }, {
+            "id": 2,
+            "imgSrc": "src/assets/svg/mail-fill.svg",
+            "url": "#"
+        }]
+    </script>
 </body>
 </html>
