some list fixes

--- a/portfolio-front/portfolio-react-app/index.html
+++ b/portfolio-front/portfolio-react-app/index.html
@@ -24,7 +24,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
     <meta name="description" content="Portfolio de Clément Floret"/>
-    <meta name="description" content="Bienvenue sur mon portfolio en ligne. Découvrez mes projets web et mobile, et mes compétences en développement. Contactez-moi pour discuter de nouvelles opportunités.">
+    <meta name="description"
+          content="Bienvenue sur mon portfolio en ligne.
+          Découvrez mes projets web et mobile, et mes compétences en développement.
+          Contactez-moi pour discuter de nouvelles opportunités.">
     <title>Clément Floret's portfolio</title>
 </head>
 <body>
@@ -63,11 +66,11 @@
 </script>
 <script id="skills" type="application/json">
     [{
-        "order": 0,
+        "id": 0,
         "name": "HTML5",
         "image": "src/assets/svg/html5-fill.svg"
     }, {
-        "order": 1,
+        "id": 1,
         "name": "CSS3",
         "image": "src/assets/svg/css3-fill.svg"
     }, {
@@ -136,62 +139,53 @@
         "image": "src/assets/svg/figma-fill.svg"
     }]
 </script>
-<script id="projects" type="application/json">
+<script id="project-list" type="application/json">
     [{
         "id": 0,
         "name": "Alpha",
         "image": "src/assets/img/ales-nesetril-Im7lZjxeLhg-unsplash.webp",
-        "type": "Web",
-        "url": "#"
+        "type": "Web"
     }, {
         "id": 1,
         "name": "Beta",
         "image": "src/assets/img/campaign-creators-OGOWDVLbMSc-unsplash.webp",
-        "type": "Mobile",
-        "url": "#"
+        "type": "Mobile"
     }, {
         "id": 2,
         "name": "Gamma",
         "image": "src/assets/img/christopher-gower-m_HRfLhgABo-unsplash.webp",
-        "type": "Mobile",
-        "url": "#"
+        "type": "Mobile"
     }, {
         "id": 3,
         "name": "Delta",
         "image": "src/assets/img/domenico-loia-EhTcC9sYXsw-unsplash.webp",
-        "type": "Web",
-        "url": "#"
+        "type": "Web"
     }, {
         "id": 4,
         "name": "Epsilon",
         "image": "src/assets/img/rodion-kutsaiev-0VGG7cqTwCo-unsplash.webp",
-        "type": "Mobile",
-        "url": "#"
+        "type": "Mobile"
     }, {
         "id": 5,
         "name": "Zeta",
         "image": "src/assets/img/taras-shypka-iFSvn82XfGo-unsplash.webp",
-        "type": "Web",
-        "url": "#"
+        "type": "Web"
     }]
 </script>
 <script id="project-types" type="application/json">
     [{
-        id: 0,
-        name: "All"
+        "id": 0,
+        "name": "Web"
     },{
-        id: 1,
-        name: "Web"
-    },{
-        id: 2,
-        name: "Mobile"
+        "id": 1,
+        "name": "Mobile"
     }]
 </script>
 <script id="project-images" type="application/json">
     [{
         "id": 0,
         "name": "project image 1",
-        "image": "./src/assets/img/ales-nesetril-Im7lZjxeLhg-unsplash.webp"
+        "image": "/src/assets/img/ales-nesetril-Im7lZjxeLhg-unsplash.webp"
     }, {
         "id": 1,
         "name": "project image 2",
