--- a/frontend/portfolio-react-app/index.html
+++ b/frontend/portfolio-react-app/index.html
@@ -24,150 +24,370 @@
 <script type="module" src="./src/main.jsx"></script>
 <script id="portfolio" type="application/json">
     {
-        "id": 0,
-        "firstname": "Clément",
+        "id": 1,
+        "name": "Web and Mobile developer portfolio",
+        "name_fr": "Portfolio d\u00e9veloppeur web et mobile",
+        "firstname": "Cl\u00e9ment",
         "lastname": "Floret",
-        "image": "src/assets/img/avatar.webp",
-        "job_title": "Web / Mobile, App Developer",
+        "job_title": "Web and Mobile Developer",
+        "job_title_fr": "D\u00e9veloppeur Web et Mobile",
         "contact_email": "clement.floret@icloud.com",
+        "avatar": "/src/assets/img/avatar.webp",
+        "resume": "/src/assets/files/CV_CLEMENT_FLORET.pdf",
         "about_description": "After several years in the industrial sector, I decided to change careers and pursue my passion for IT, particularly development. To make my project a success, I undertook training and obtained the RNCP title of Web and Mobile Web Developer. Today, I am seeking to apply my skills as an application developer.",
-        "resume": "src/assets/files/CV_CLEMENT_FLORET.pdf"
+        "about_description_fr": "Apr\u00e8s plusieurs ann\u00e9es dans le secteur industriel, j\u2019ai entam\u00e9 une reconversion afin de me tourner vers ma passion : l\u2019informatique et particuli\u00e8rement le d\u00e9veloppement. Pour mener \u00e0 bien mon projet, je me suis form\u00e9 et j\u2019ai obtenu le titre RNCP de D\u00e9veloppeur web et web mobile. Je souhaite aujourd\u2019hui mettre \u00e0 profit mes comp\u00e9tences et \u00e9voluer en tant que d\u00e9veloppeur d\u2019applications."
     }
 </script>
-<script id="social-links" type="application/json">
+<script id="about-links" type="application/json">
     [{
-        "id": 0,
+        "id": 2,
         "name": "GitHub",
-        "image": "src/assets/svg/github-fill.svg",
+        "icon": "src/assets/svg/github-fill.svg",
         "url": "https://github.com/floretcl"
     }, {
         "id": 1,
         "name": "LinkedIn",
-        "image": "src/assets/svg/linkedin-fill.svg",
+        "icon": "src/assets/svg/linkedin-fill.svg",
         "url": "https://www.linkedin.com/in/floretcl"
     }, {
-        "id": 2,
+        "id": 3,
         "name": "Email",
-        "image": "src/assets/svg/mail-fill.svg",
+        "icon": "src/assets/svg/mail-fill.svg",
         "url": "mailto: clement.floret@icloud.com"
     }]
 </script>
-<script id="skills" type="application/json">
-    [{
-        "id": 0,
-        "name": "HTML5",
-        "image": "src/assets/svg/html5-fill.svg"
-    }, {
-        "id": 1,
-        "name": "CSS3",
-        "image": "src/assets/svg/css3-fill.svg"
-    }, {
-        "id": 2,
-        "name": "Javascript",
-        "image": "src/assets/svg/javascript-fill.svg"
-    }, {
-        "id": 3,
-        "name": "PHP",
-        "image": "src/assets/svg/php-fill.svg"
-    }, {
-        "id": 4,
-        "name": "Python",
-        "image": "src/assets/svg/python-fill.svg"
-    }, {
-        "id": 5,
-        "name": "Django",
-        "image": "src/assets/svg/django-fill.svg"
-    }, {
-        "id": 6,
-        "name": "MariaDB",
-        "image": "src/assets/svg/mariadb-fill.svg"
-    }, {
-        "id": 7,
-        "name": "MySQL",
-        "image": "src/assets/svg/mysql-fill.svg"
-    }, {
-        "id": 8,
-        "name": "PostgreSQL",
-        "image": "src/assets/svg/postgresql-fill.svg"
-    }, {
-        "id": 9,
-        "name": "Sass",
-        "image": "src/assets/svg/sass-fill.svg"
-    }, {
-        "id": 10,
-        "name": "Tailwind",
-        "image": "src/assets/svg/tailwindcss-fill.svg"
-    }, {
-        "id": 11,
-        "name": "Bootstrap",
-        "image": "src/assets/svg/bootstrap-fill.svg"
-    }, {
-        "id": 12,
-        "name": "Kotlin",
-        "image": "src/assets/svg/kotlin-fill.svg"
-    }, {
-        "id": 13,
-        "name": "Swift",
-        "image": "src/assets/svg/swift-fill.svg"
-    }, {
-        "id": 14,
-        "name": "Npm",
-        "image": "src/assets/svg/npmjs-fill.svg"
-    }, {
-        "id": 15,
-        "name": "Wordpress",
-        "image": "src/assets/svg/wordpress-fill.svg"
-    }, {
-        "id": 16,
-        "name": "Git",
-        "image": "src/assets/svg/git-fill.svg"
-    }, {
-        "id": 17,
-        "name": "Figma",
-        "image": "src/assets/svg/figma-fill.svg"
-    }]
+<script id="about-skills" type="application/json">
+    [
+        {
+            "id": 1,
+            "name": "HTML",
+            "icon": "src/assets/svg/html5-fill.svg"
+        },
+        {
+            "id": 2,
+            "name": "CSS",
+            "icon": "src/assets/svg/css3-fill.svg"
+        },
+        {
+            "id": 4,
+            "name": "Javascript",
+            "icon": "src/assets/svg/javascript-fill.svg"
+        },
+        {
+            "id": 6,
+            "name": "Python",
+            "icon": "src/assets/svg/python-fill.svg"
+        },
+        {
+            "id": 5,
+            "name": "PHP",
+            "icon": "src/assets/svg/php-fill.svg"
+        },
+        {
+            "id": 7,
+            "name": "Swift",
+            "icon": "src/assets/svg/swift-fill.svg"
+        },
+        {
+            "id": 8,
+            "name": "Kotlin",
+            "icon": "src/assets/svg/kotlin-fill.svg"
+        },
+        {
+            "id": 9,
+            "name": "Bootstrap",
+            "icon": "src/assets/svg/bootstrap-fill.svg"
+        },
+        {
+            "id": 10,
+            "name": "TailwindCSS",
+            "icon": "src/assets/svg/tailwindcss-fill.svg"
+        },
+        {
+            "id": 11,
+            "name": "Django",
+            "icon": "src/assets/svg/django-fill.svg"
+        },
+        {
+            "id": 29,
+            "name": "Npm",
+            "icon": "src/assets/svg/npmjs-fill.svg"
+        },
+        {
+            "id": 3,
+            "name": "Sass",
+            "icon": "src/assets/svg/sass-fill.svg"
+        },
+        {
+            "id": 26,
+            "name": "Wordpress",
+            "icon": "src/assets/svg/wordpress-fill.svg"
+        },
+        {
+            "id": 14,
+            "name": "SQL",
+            "icon": "src/assets/svg/sql-fill.svg"
+        },
+        {
+            "id": 16,
+            "name": "MySQL",
+            "icon": "src/assets/svg/mysql-fill.svg"
+        },
+        {
+            "id": 15,
+            "name": "MariaDB",
+            "icon": "src/assets/svg/mariadb-fill.svg"
+        },
+        {
+            "id": 17,
+            "name": "PostgreSQL",
+            "icon": "src/assets/svg/postgresql-fill.svg"
+        },
+        {
+            "id": 18,
+            "name": "Git",
+            "icon": "src/assets/svg/git-fill.svg"
+        },
+        {
+            "id": 19,
+            "name": "GitHub",
+            "icon": "src/assets/svg/github-fill.svg"
+        },
+        {
+            "id": 22,
+            "name": "VScode",
+            "icon": "src/assets/svg/vscode-fill.svg"
+        },
+        {
+            "id": 20,
+            "name": "PyCharm",
+            "icon": "src/assets/svg/pycharm-fill.svg"
+        },
+        {
+            "id": 21,
+            "name": "PhpStorm",
+            "icon": "src/assets/svg/phpstorm-fill.svg"
+        },
+        {
+            "id": 23,
+            "name": "Xcode",
+            "icon": "src/assets/svg/xcode-fill.svg"
+        },
+        {
+            "id": 24,
+            "name": "Android Studio",
+            "icon": "src/assets/svg/android-studio-fill.svg"
+        },
+        {
+            "id": 25,
+            "name": "Figma",
+            "icon": "src/assets/svg/figma-fill.svg"
+        },
+        {
+            "id": 27,
+            "name": "MacOS",
+            "icon": "src/assets/svg/apple-fill.svg"
+        },
+        {
+            "id": 28,
+            "name": "GNU/Linux",
+            "icon": "src/assets/svg/linux-fill.svg"
+        }
+    ]
 </script>
-<script id="project-list" type="application/json">
-    [{
-        "id": 0,
-        "name": "Alpha",
-        "image": "src/assets/img/ales-nesetril-Im7lZjxeLhg-unsplash.webp",
-        "type": "Web"
-    }, {
+<script id="projects" type="application/json">
+    [
+    {
         "id": 1,
-        "name": "Beta",
-        "image": "src/assets/img/campaign-creators-OGOWDVLbMSc-unsplash.webp",
-        "type": "Mobile"
-    }, {
+        "name": "Garage V.Parrot",
+        "name_fr": "Garage V.Parrot",
+        "type": "Web",
+        "images": [
+            {
+                "id": 1,
+                "name": "project image 1",
+                "url": "src/assets/img/ales-nesetril-Im7lZjxeLhg-unsplash.webp"
+            }
+        ]
+    },
+    {
         "id": 2,
-        "name": "Gamma",
-        "image": "src/assets/img/christopher-gower-m_HRfLhgABo-unsplash.webp",
-        "type": "Mobile"
-    }, {
+        "name": "KGB mission management",
+        "name_fr": "Gestion des missions du KGB",
+        "type": "Web",
+        "images": [
+            {
+                "id": 1,
+                "name": "project image 1",
+                "url": "src/assets/img/taras-shypka-iFSvn82XfGo-unsplash.webp"
+            }
+        ]
+    },
+    {
         "id": 3,
-        "name": "Delta",
-        "image": "src/assets/img/domenico-loia-EhTcC9sYXsw-unsplash.webp",
-        "type": "Web"
-    }, {
+        "name": "Movie theater complex",
+        "name_fr": "Complexe de cin\u00e9ma",
+        "type": "Web",
+        "images": [
+            {
+                "id": 1,
+                "name": "project image 1",
+                "url": "src/assets/img/rodion-kutsaiev-0VGG7cqTwCo-unsplash.webp"
+            }
+        ]
+    },
+    {
         "id": 4,
-        "name": "Epsilon",
-        "image": "src/assets/img/rodion-kutsaiev-0VGG7cqTwCo-unsplash.webp",
-        "type": "Mobile"
-    }, {
+        "name": "TravelVibe: travel agency",
+        "name_fr": "TravelVibe : agence de voyage",
+        "type": "Web",
+        "images": [
+            {
+                "id": 1,
+                "name": "project image 1",
+                "url": "src/assets/img/domenico-loia-EhTcC9sYXsw-unsplash.webp"
+            }
+        ]
+    },
+    {
         "id": 5,
-        "name": "Zeta",
-        "image": "src/assets/img/taras-shypka-iFSvn82XfGo-unsplash.webp",
-        "type": "Web"
-    }]
+        "name": "Clipboard design",
+        "name_fr": "Maquettes Clipboard",
+        "type": "Web",
+        "images": [
+            {
+                "id": 1,
+                "name": "project image 1",
+                "url": "src/assets/img/christopher-gower-m_HRfLhgABo-unsplash.webp"
+            }
+        ]
+    },
+    {
+        "id": 6,
+        "name": "DiceGame",
+        "name_fr": "Jeu de d\u00e9",
+        "type": "Web",
+        "images": [
+            {
+                "id": 1,
+                "name": "project image 1",
+                "url": "src/assets/img/campaign-creators-OGOWDVLbMSc-unsplash.webp"
+            }
+        ]
+    },
+    {
+        "id": 7,
+        "name": "Roue Libre",
+        "name_fr": "Roue Libre",
+        "type": "Web",
+        "images": [
+            {
+                "id": 1,
+                "name": "project image 1",
+                "url": "src/assets/img/ales-nesetril-Im7lZjxeLhg-unsplash.webp"
+            }
+        ]
+    },
+    {
+        "id": 8,
+        "name": "StationF Homepage",
+        "name_fr": "Page d'accueil de StationF",
+        "type": "Web",
+        "images": [
+            {
+                "id": 1,
+                "name": "project image 1",
+                "url": "src/assets/img/taras-shypka-iFSvn82XfGo-unsplash.webp"
+            }
+        ]
+    },
+    {
+        "id": 9,
+        "name": "Kana Torii website",
+        "name_fr": "Site web de KanaTorii",
+        "type": "Web",
+        "images": [
+            {
+                "id": 1,
+                "name": "project image 1",
+                "url": "src/assets/img/rodion-kutsaiev-0VGG7cqTwCo-unsplash.webp"
+            }
+        ]
+    },
+    {
+        "id": 10,
+        "name": "Kana Torii : iOS app",
+        "name_fr": "Kana Torii : app iOS",
+        "type": "Mobile",
+        "images": [
+            {
+                "id": 1,
+                "name": "project image 1",
+                "url": "src/assets/img/domenico-loia-EhTcC9sYXsw-unsplash.webp"
+            }
+        ]
+    },
+    {
+        "id": 12,
+        "name": "Traveller : iOS app",
+        "name_fr": "Traveller : app iOS",
+        "type": "Mobile",
+        "images": [
+            {
+                "id": 1,
+                "name": "project image 1",
+                "url": "src/assets/img/christopher-gower-m_HRfLhgABo-unsplash.webp"
+            }
+        ]
+    },
+    {
+        "id": 13,
+        "name": "TodoList : iOS app",
+        "name_fr": "TodoList : app iOS",
+        "type": "Mobile",
+        "images": [
+            {
+                "id": 1,
+                "name": "project image 1",
+                "url": "src/assets/img/ales-nesetril-Im7lZjxeLhg-unsplash.webp"
+            }
+        ]
+    },
+    {
+        "id": 11,
+        "name": "Kana Torii v1 : iOS app",
+        "name_fr": "Kana Torii v1 : app iOS",
+        "type": "Mobile",
+        "images": [
+            {
+                "id": 1,
+                "name": "project image 1",
+                "url": "src/assets/img/campaign-creators-OGOWDVLbMSc-unsplash.webp"
+            }
+        ]
+    }
+]
 </script>
 <script id="project-types" type="application/json">
     [{
-        "id": 0,
-        "name": "Web"
-    },{
         "id": 1,
-        "name": "Mobile"
+        "name": "Web",
+        "name_fr": "Web"
+    }, {
+        "id": 2,
+        "name": "Mobile",
+        "name_fr": "Mobile"
     }]
+</script>
+<script id="project" type="application/json">
+    {
+        "id": 1,
+        "name": "Garage V.Parrot",
+        "name_fr": "Garage V.Parrot",
+        "description": "Showcase web application for the V.Parrot automobile garage.",
+        "description_fr": "Application web vitrine pour le Garage automobile V.Parrot.",
+        "type": "Web"
+    }
 </script>
 <script id="project-images" type="application/json">
     [{
@@ -218,27 +438,25 @@
         "name": "MacOS"
     }]
 </script>
+
 <script id="project-links" type="application/json">
-    [{
-        "id": 0,
-        "name": "GitHub",
-        "url": "#"
-    }, {
-        "id": 1,
-        "name": "Figma",
-        "url": "#"
-    }, {
-        "id": 2,
-        "name": "Website",
-        "url": "#"
-    }]
-</script>
-<script id="project" type="application/json">
-    {
-        "id": 0,
-        "name": "Project name",
-        "description": "Lorem ipsum dolor sit amet consectetur. Sed tellus at penatibus mattis blandit adipiscing. Tempus malesuada tempus ut eu. Ullamcorper id sollicitudin pharetra in aliquam ut in orci aenean. Et ullamcorper congue justo ut tortor. Blandit ante id egestas diam cursus nascetur. Mauris nec nulla integer vitae dui rhoncus scelerisque. Condimentum massa egestas euismod orci urna. Non amet faucibus purus posuere venenatis. Curabitur porta convallis dignissim suspendisse a felis lorem id phasellus. Sem viverra felis sit adipiscing nibh vestibulum."
-    }
+    [
+        {
+            "id": 1,
+            "name": "Website",
+            "icon": "/src/assets/svg/earth-fill.svg"
+        },
+        {
+            "id": 0,
+            "name": "GitHub",
+            "icon": "/src/assets/svg/github-fill.svg"
+        },
+        {
+            "id": 2,
+            "name": "Figma",
+            "icon": "/src/assets/svg/figma-fill.svg"
+        }
+    ]
 </script>
 </body>
 </html>
