--- a/frontend/portfolio-react-app/index.html
+++ b/frontend/portfolio-react-app/index.html
@@ -32,8 +32,8 @@
         "job_title": "Web and Mobile Developer",
         "job_title_fr": "D\u00e9veloppeur Web et Mobile",
         "contact_email": "clement.floret@icloud.com",
-        "avatar": "/src/assets/img/avatar.webp",
-        "resume": "/src/assets/files/CV_CLEMENT_FLORET.pdf",
+        "avatar": "/src/static/img/avatar.webp",
+        "resume": "/src/static/files/CV_CLEMENT_FLORET.pdf",
         "about_description": "After several years in the industrial sector, I decided to change careers and pursue my passion for IT, particularly development. To make my project a success, I undertook training and obtained the RNCP title of Web and Mobile Web Developer. Today, I am seeking to apply my skills as an application developer.",
         "about_description_fr": "Apr\u00e8s plusieurs ann\u00e9es dans le secteur industriel, j\u2019ai entam\u00e9 une reconversion afin de me tourner vers ma passion : l\u2019informatique et particuli\u00e8rement le d\u00e9veloppement. Pour mener \u00e0 bien mon projet, je me suis form\u00e9 et j\u2019ai obtenu le titre RNCP de D\u00e9veloppeur web et web mobile. Je souhaite aujourd\u2019hui mettre \u00e0 profit mes comp\u00e9tences et \u00e9voluer en tant que d\u00e9veloppeur d\u2019applications."
     }
@@ -42,17 +42,17 @@
     [{
         "id": 2,
         "name": "GitHub",
-        "icon": "/src/assets/svg/github-fill.svg",
+        "icon": "/src/static/svg/github-fill.svg",
         "url": "https://github.com/floretcl"
     }, {
         "id": 1,
         "name": "LinkedIn",
-        "icon": "/src/assets/svg/linkedin-fill.svg",
+        "icon": "/src/static/svg/linkedin-fill.svg",
         "url": "https://www.linkedin.com/in/floretcl"
     }, {
         "id": 3,
         "name": "Email",
-        "icon": "/src/assets/svg/mail-fill.svg",
+        "icon": "/src/static/svg/mail-fill.svg",
         "url": "mailto: clement.floret@icloud.com"
     }]
 </script>
@@ -61,137 +61,137 @@
         {
             "id": 1,
             "name": "HTML",
-            "icon": "/src/assets/svg/html5-fill.svg"
+            "icon": "/src/static/svg/html5-fill.svg"
         },
         {
             "id": 2,
             "name": "CSS",
-            "icon": "/src/assets/svg/css3-fill.svg"
+            "icon": "/src/static/svg/css3-fill.svg"
         },
         {
             "id": 4,
             "name": "Javascript",
-            "icon": "/src/assets/svg/javascript-fill.svg"
+            "icon": "/src/static/svg/javascript-fill.svg"
         },
         {
             "id": 6,
             "name": "Python",
-            "icon": "/src/assets/svg/python-fill.svg"
+            "icon": "/src/static/svg/python-fill.svg"
         },
         {
             "id": 5,
             "name": "PHP",
-            "icon": "/src/assets/svg/php-fill.svg"
+            "icon": "/src/static/svg/php-fill.svg"
         },
         {
             "id": 7,
             "name": "Swift",
-            "icon": "/src/assets/svg/swift-fill.svg"
+            "icon": "/src/static/svg/swift-fill.svg"
         },
         {
             "id": 8,
             "name": "Kotlin",
-            "icon": "/src/assets/svg/kotlin-fill.svg"
+            "icon": "/src/static/svg/kotlin-fill.svg"
         },
         {
             "id": 9,
             "name": "Bootstrap",
-            "icon": "/src/assets/svg/bootstrap-fill.svg"
+            "icon": "/src/static/svg/bootstrap-fill.svg"
         },
         {
             "id": 10,
             "name": "TailwindCSS",
-            "icon": "/src/assets/svg/tailwindcss-fill.svg"
+            "icon": "/src/static/svg/tailwindcss-fill.svg"
         },
         {
             "id": 11,
             "name": "Django",
-            "icon": "/src/assets/svg/django-fill.svg"
+            "icon": "/src/static/svg/django-fill.svg"
         },
         {
             "id": 29,
             "name": "Npm",
-            "icon": "/src/assets/svg/npmjs-fill.svg"
+            "icon": "/src/static/svg/npmjs-fill.svg"
         },
         {
             "id": 3,
             "name": "Sass",
-            "icon": "/src/assets/svg/sass-fill.svg"
+            "icon": "/src/static/svg/sass-fill.svg"
         },
         {
             "id": 26,
             "name": "Wordpress",
-            "icon": "/src/assets/svg/wordpress-fill.svg"
+            "icon": "/src/static/svg/wordpress-fill.svg"
         },
         {
             "id": 14,
             "name": "SQL",
-            "icon": "/src/assets/svg/sql-fill.svg"
+            "icon": "/src/static/svg/sql-fill.svg"
         },
         {
             "id": 16,
             "name": "MySQL",
-            "icon": "/src/assets/svg/mysql-fill.svg"
+            "icon": "/src/static/svg/mysql-fill.svg"
         },
         {
             "id": 15,
             "name": "MariaDB",
-            "icon": "/src/assets/svg/mariadb-fill.svg"
+            "icon": "/src/static/svg/mariadb-fill.svg"
         },
         {
             "id": 17,
             "name": "PostgreSQL",
-            "icon": "/src/assets/svg/postgresql-fill.svg"
+            "icon": "/src/static/svg/postgresql-fill.svg"
         },
         {
             "id": 18,
             "name": "Git",
-            "icon": "/src/assets/svg/git-fill.svg"
+            "icon": "/src/static/svg/git-fill.svg"
         },
         {
             "id": 19,
             "name": "GitHub",
-            "icon": "/src/assets/svg/github-fill.svg"
+            "icon": "/src/static/svg/github-fill.svg"
         },
         {
             "id": 22,
             "name": "VScode",
-            "icon": "/src/assets/svg/vscode-fill.svg"
+            "icon": "/src/static/svg/vscode-fill.svg"
         },
         {
             "id": 20,
             "name": "PyCharm",
-            "icon": "/src/assets/svg/pycharm-fill.svg"
+            "icon": "/src/static/svg/pycharm-fill.svg"
         },
         {
             "id": 21,
             "name": "PhpStorm",
-            "icon": "/src/assets/svg/phpstorm-fill.svg"
+            "icon": "/src/static/svg/phpstorm-fill.svg"
         },
         {
             "id": 23,
             "name": "Xcode",
-            "icon": "/src/assets/svg/xcode-fill.svg"
+            "icon": "/src/static/svg/xcode-fill.svg"
         },
         {
             "id": 24,
             "name": "Android Studio",
-            "icon": "/src/assets/svg/android-studio-fill.svg"
+            "icon": "/src/static/svg/android-studio-fill.svg"
         },
         {
             "id": 25,
             "name": "Figma",
-            "icon": "/src/assets/svg/figma-fill.svg"
+            "icon": "/src/static/svg/figma-fill.svg"
         },
         {
             "id": 27,
             "name": "MacOS",
-            "icon": "/src/assets/svg/apple-fill.svg"
+            "icon": "/src/static/svg/apple-fill.svg"
         },
         {
             "id": 28,
             "name": "GNU/Linux",
-            "icon": "/src/assets/svg/linux-fill.svg"
+            "icon": "/src/static/svg/linux-fill.svg"
         }
     ]
 </script>
@@ -206,7 +206,7 @@
             {
                 "id": 1,
                 "name": "project image 1",
-                "url": "/src/assets/img/ales-nesetril-Im7lZjxeLhg-unsplash.webp"
+                "url": "/src/static/img/ales-nesetril-Im7lZjxeLhg-unsplash.webp"
             }
         ]
     },
@@ -219,7 +219,7 @@
             {
                 "id": 1,
                 "name": "project image 1",
-                "url": "/src/assets/img/taras-shypka-iFSvn82XfGo-unsplash.webp"
+                "url": "/src/static/img/taras-shypka-iFSvn82XfGo-unsplash.webp"
             }
         ]
     },
@@ -232,7 +232,7 @@
             {
                 "id": 1,
                 "name": "project image 1",
-                "url": "/src/assets/img/rodion-kutsaiev-0VGG7cqTwCo-unsplash.webp"
+                "url": "/src/static/img/rodion-kutsaiev-0VGG7cqTwCo-unsplash.webp"
             }
         ]
     },
@@ -245,7 +245,7 @@
             {
                 "id": 1,
                 "name": "project image 1",
-                "url": "/src/assets/img/domenico-loia-EhTcC9sYXsw-unsplash.webp"
+                "url": "/src/static/img/domenico-loia-EhTcC9sYXsw-unsplash.webp"
             }
         ]
     },
@@ -258,7 +258,7 @@
             {
                 "id": 1,
                 "name": "project image 1",
-                "url": "/src/assets/img/christopher-gower-m_HRfLhgABo-unsplash.webp"
+                "url": "/src/static/img/christopher-gower-m_HRfLhgABo-unsplash.webp"
             }
         ]
     },
@@ -271,7 +271,7 @@
             {
                 "id": 1,
                 "name": "project image 1",
-                "url": "/src/assets/img/campaign-creators-OGOWDVLbMSc-unsplash.webp"
+                "url": "/src/static/img/campaign-creators-OGOWDVLbMSc-unsplash.webp"
             }
         ]
     },
@@ -284,7 +284,7 @@
             {
                 "id": 1,
                 "name": "project image 1",
-                "url": "/src/assets/img/ales-nesetril-Im7lZjxeLhg-unsplash.webp"
+                "url": "/src/static/img/ales-nesetril-Im7lZjxeLhg-unsplash.webp"
             }
         ]
     },
@@ -297,7 +297,7 @@
             {
                 "id": 1,
                 "name": "project image 1",
-                "url": "/src/assets/img/taras-shypka-iFSvn82XfGo-unsplash.webp"
+                "url": "/src/static/img/taras-shypka-iFSvn82XfGo-unsplash.webp"
             }
         ]
     },
@@ -310,7 +310,7 @@
             {
                 "id": 1,
                 "name": "project image 1",
-                "url": "/src/assets/img/rodion-kutsaiev-0VGG7cqTwCo-unsplash.webp"
+                "url": "/src/static/img/rodion-kutsaiev-0VGG7cqTwCo-unsplash.webp"
             }
         ]
     },
@@ -323,7 +323,7 @@
             {
                 "id": 1,
                 "name": "project image 1",
-                "url": "/src/assets/img/domenico-loia-EhTcC9sYXsw-unsplash.webp"
+                "url": "/src/static/img/domenico-loia-EhTcC9sYXsw-unsplash.webp"
             }
         ]
     },
@@ -336,7 +336,7 @@
             {
                 "id": 1,
                 "name": "project image 1",
-                "url": "/src/assets/img/christopher-gower-m_HRfLhgABo-unsplash.webp"
+                "url": "/src/static/img/christopher-gower-m_HRfLhgABo-unsplash.webp"
             }
         ]
     },
@@ -349,7 +349,7 @@
             {
                 "id": 1,
                 "name": "project image 1",
-                "url": "/src/assets/img/ales-nesetril-Im7lZjxeLhg-unsplash.webp"
+                "url": "/src/static/img/ales-nesetril-Im7lZjxeLhg-unsplash.webp"
             }
         ]
     },
@@ -362,7 +362,7 @@
             {
                 "id": 1,
                 "name": "project image 1",
-                "url": "/src/assets/img/campaign-creators-OGOWDVLbMSc-unsplash.webp"
+                "url": "/src/static/img/campaign-creators-OGOWDVLbMSc-unsplash.webp"
             }
         ]
     }
@@ -393,19 +393,19 @@
     [{
         "id": 0,
         "name": "project image 1",
-        "image": "/src/assets/img/ales-nesetril-Im7lZjxeLhg-unsplash.webp"
+        "image": "/src/static/img/ales-nesetril-Im7lZjxeLhg-unsplash.webp"
     }, {
         "id": 1,
         "name": "project image 2",
-        "image": "/src/assets/img/campaign-creators-OGOWDVLbMSc-unsplash.webp"
+        "image": "/src/static/img/campaign-creators-OGOWDVLbMSc-unsplash.webp"
     }, {
         "id": 2,
         "name": "project image 3",
-        "image": "/src/assets/img/christopher-gower-m_HRfLhgABo-unsplash.webp"
+        "image": "/src/static/img/christopher-gower-m_HRfLhgABo-unsplash.webp"
     }, {
         "id": 3,
         "name": "project image 4",
-        "image": "/src/assets/img/domenico-loia-EhTcC9sYXsw-unsplash.webp"
+        "image": "/src/static/img/domenico-loia-EhTcC9sYXsw-unsplash.webp"
     }]
 </script>
 <script id="project-skills" type="application/json">
@@ -438,25 +438,24 @@
         "name": "MacOS"
     }]
 </script>
-
 <script id="project-links" type="application/json">
     [
         {
             "id": 1,
             "name": "Website",
-            "icon": "/src/assets/svg/earth-fill.svg",
+            "icon": "/src/static/svg/earth-fill.svg",
             "url": ""
         },
         {
             "id": 0,
             "name": "GitHub",
-            "icon": "/src/assets/svg/github-fill.svg",
+            "icon": "/src/static/svg/github-fill.svg",
             "url": ""
         },
         {
             "id": 2,
             "name": "Figma",
-            "icon": "/src/assets/svg/figma-fill.svg",
+            "icon": "/src/static/svg/figma-fill.svg",
             "url": ""
         }
     ]
