backend and frontend work perfectly together

--- a/backend/portfolio/static/portfolio/index.html
+++ b/backend/portfolio/static/portfolio/index.html
@@ -3,22 +3,20 @@
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png">
-    <link rel="shortcut icon" href="/icons/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="/icons/favicon.ico" type="image/x-icon">
-    <link rel="manifest" href="/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="/static/portfolio/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/static/portfolio/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/static/portfolio/icons/favicon-16x16.png">
+    <link rel="shortcut icon" href="/static/portfolio/icons/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/static/portfolio/icons/favicon.ico" type="image/x-icon">
+    <link rel="manifest" href="/static/portfolio/site.webmanifest">
 
-
-    <meta name="description" content="Portfolio de Clément Floret"/>
+    <title>Clément Floret | Portfolio</title>
     <meta name="description"
-          content="Bienvenue sur mon portfolio en ligne.
-          Découvrez mes projets web et mobile, et mes compétences en développement.
-          Contactez-moi pour discuter de nouvelles opportunités.">
-    <title>Clément Floret's portfolio</title>
-  <script type="module" crossorigin src="static/js/index-DjHDVyX2.js"></script>
-  <link rel="stylesheet" crossorigin href="/static/css/index-CRsTR7xH.css">
+          content="Welcome to my online portfolio.
+          Discover my web and mobile projects, and my development skills.
+          Contact me to discuss new opportunities."/>
+  <script type="module" crossorigin src="/static/portfolio/js/index-BWC2lFi9.js"></script>
+  <link rel="stylesheet" crossorigin href="/static/portfolio/css/index-Gs_lxHpn.css">
 </head>
 <body>
 <div id="root"></div>
@@ -43,17 +41,17 @@
     [{
         "id": 2,
         "name": "GitHub",
-        "icon": "/src/static/svg/github-fill.svg",
+        "icon": "/src/static/img/github-fill.svg",
         "url": "https://github.com/floretcl"
     }, {
         "id": 1,
         "name": "LinkedIn",
-        "icon": "/src/static/svg/linkedin-fill.svg",
+        "icon": "/src/static/img/linkedin-fill.svg",
         "url": "https://www.linkedin.com/in/floretcl"
     }, {
         "id": 3,
         "name": "Email",
-        "icon": "/src/static/svg/mail-fill.svg",
+        "icon": "/src/static/img/mail-fill.svg",
         "url": "mailto: clement.floret@icloud.com"
     }]
 </script>
@@ -62,137 +60,137 @@
         {
             "id": 1,
             "name": "HTML",
-            "icon": "/src/static/svg/html5-fill.svg"
+            "icon": "/src/static/img/html5-fill.svg"
         },
         {
             "id": 2,
             "name": "CSS",
-            "icon": "/src/static/svg/css3-fill.svg"
+            "icon": "/src/static/img/css3-fill.svg"
         },
         {
             "id": 4,
             "name": "Javascript",
-            "icon": "/src/static/svg/javascript-fill.svg"
+            "icon": "/src/static/img/javascript-fill.svg"
         },
         {
             "id": 6,
             "name": "Python",
-            "icon": "/src/static/svg/python-fill.svg"
+            "icon": "/src/static/img/python-fill.svg"
         },
         {
             "id": 5,
             "name": "PHP",
-            "icon": "/src/static/svg/php-fill.svg"
+            "icon": "/src/static/img/php-fill.svg"
         },
         {
             "id": 7,
             "name": "Swift",
-            "icon": "/src/static/svg/swift-fill.svg"
+            "icon": "/src/static/img/swift-fill.svg"
         },
         {
             "id": 8,
             "name": "Kotlin",
-            "icon": "/src/static/svg/kotlin-fill.svg"
+            "icon": "/src/static/img/kotlin-fill.svg"
         },
         {
             "id": 9,
             "name": "Bootstrap",
-            "icon": "/src/static/svg/bootstrap-fill.svg"
+            "icon": "/src/static/img/bootstrap-fill.svg"
         },
         {
             "id": 10,
             "name": "TailwindCSS",
-            "icon": "/src/static/svg/tailwindcss-fill.svg"
+            "icon": "/src/static/img/tailwindcss-fill.svg"
         },
         {
             "id": 11,
             "name": "Django",
-            "icon": "/src/static/svg/django-fill.svg"
+            "icon": "/src/static/img/django-fill.svg"
         },
         {
             "id": 29,
             "name": "Npm",
-            "icon": "/src/static/svg/npmjs-fill.svg"
+            "icon": "/src/static/img/npmjs-fill.svg"
         },
         {
             "id": 3,
             "name": "Sass",
-            "icon": "/src/static/svg/sass-fill.svg"
+            "icon": "/src/static/img/sass-fill.svg"
         },
         {
             "id": 26,
             "name": "Wordpress",
-            "icon": "/src/static/svg/wordpress-fill.svg"
+            "icon": "/src/static/img/wordpress-fill.svg"
         },
         {
             "id": 14,
             "name": "SQL",
-            "icon": "/src/static/svg/sql-fill.svg"
+            "icon": "/src/static/img/sql-fill.svg"
         },
         {
             "id": 16,
             "name": "MySQL",
-            "icon": "/src/static/svg/mysql-fill.svg"
+            "icon": "/src/static/img/mysql-fill.svg"
         },
         {
             "id": 15,
             "name": "MariaDB",
-            "icon": "/src/static/svg/mariadb-fill.svg"
+            "icon": "/src/static/img/mariadb-fill.svg"
         },
         {
             "id": 17,
             "name": "PostgreSQL",
-            "icon": "/src/static/svg/postgresql-fill.svg"
+            "icon": "/src/static/img/postgresql-fill.svg"
         },
         {
             "id": 18,
             "name": "Git",
-            "icon": "/src/static/svg/git-fill.svg"
+            "icon": "/src/static/img/git-fill.svg"
         },
         {
             "id": 19,
             "name": "GitHub",
-            "icon": "/src/static/svg/github-fill.svg"
+            "icon": "/src/static/img/github-fill.svg"
         },
         {
             "id": 22,
             "name": "VScode",
-            "icon": "/src/static/svg/vscode-fill.svg"
+            "icon": "/src/static/img/vscode-fill.svg"
         },
         {
             "id": 20,
             "name": "PyCharm",
-            "icon": "/src/static/svg/pycharm-fill.svg"
+            "icon": "/src/static/img/pycharm-fill.svg"
         },
         {
             "id": 21,
             "name": "PhpStorm",
-            "icon": "/src/static/svg/phpstorm-fill.svg"
+            "icon": "/src/static/img/phpstorm-fill.svg"
         },
         {
             "id": 23,
             "name": "Xcode",
-            "icon": "/src/static/svg/xcode-fill.svg"
+            "icon": "/src/static/img/xcode-fill.svg"
         },
         {
             "id": 24,
             "name": "Android Studio",
-            "icon": "/src/static/svg/android-studio-fill.svg"
+            "icon": "/src/static/img/android-studio-fill.svg"
         },
         {
             "id": 25,
             "name": "Figma",
-            "icon": "/src/static/svg/figma-fill.svg"
+            "icon": "/src/static/img/figma-fill.svg"
         },
         {
             "id": 27,
             "name": "MacOS",
-            "icon": "/src/static/svg/apple-fill.svg"
+            "icon": "/src/static/img/apple-fill.svg"
         },
         {
             "id": 28,
             "name": "GNU/Linux",
-            "icon": "/src/static/svg/linux-fill.svg"
+            "icon": "/src/static/img/linux-fill.svg"
         }
     ]
 </script>
@@ -387,6 +385,56 @@
         "name_fr": "Garage V.Parrot",
         "description": "Showcase web application for the V.Parrot automobile garage.",
         "description_fr": "Application web vitrine pour le Garage automobile V.Parrot.",
+        "skills": [
+            [
+                1,
+                "HTML"
+            ],
+            [
+                2,
+                "CSS"
+            ],
+            [
+                4,
+                "Javascript"
+            ],
+            [
+                6,
+                "Python"
+            ],
+            [
+                10,
+                "TailwindCSS"
+            ],
+            [
+                11,
+                "Django"
+            ],
+            [
+                29,
+                "Npm"
+            ],
+            [
+                15,
+                "MariaDB"
+            ],
+            [
+                18,
+                "Git"
+            ],
+            [
+                19,
+                "GitHub"
+            ],
+            [
+                20,
+                "PyCharm"
+            ],
+            [
+                25,
+                "Figma"
+            ]
+        ],
         "type": "Web"
     }
 </script>
@@ -409,54 +457,24 @@
         "image": "/src/static/img/domenico-loia-EhTcC9sYXsw-unsplash.webp"
     }]
 </script>
-<script id="project-skills" type="application/json">
-    [{
-        "id": 0,
-        "name": "HTML5"
-    }, {
-        "id": 1,
-        "name": "CSS3"
-    }, {
-        "id": 2,
-        "name": "Javascript"
-    }, {
-        "id": 3,
-        "name": "Python"
-    }, {
-        "id": 4,
-        "name": "Django"
-    }, {
-        "id": 5,
-        "name": "Git"
-    }, {
-        "id": 6,
-        "name": "GitHub"
-    }, {
-        "id": 7,
-        "name": "PyCharm"
-    }, {
-        "id": 8,
-        "name": "MacOS"
-    }]
-</script>
 <script id="project-links" type="application/json">
     [
         {
             "id": 1,
             "name": "Website",
-            "icon": "/src/static/svg/earth-fill.svg",
+            "icon": "/src/static/img/earth-fill.svg",
             "url": ""
         },
         {
             "id": 0,
             "name": "GitHub",
-            "icon": "/src/static/svg/github-fill.svg",
+            "icon": "/src/static/img/github-fill.svg",
             "url": ""
         },
         {
             "id": 2,
             "name": "Figma",
-            "icon": "/src/static/svg/figma-fill.svg",
+            "icon": "/src/static/img/figma-fill.svg",
             "url": ""
         }
     ]
