resume now en and fr

--- a/frontend/portfolio-react-app/index.html
+++ b/frontend/portfolio-react-app/index.html
@@ -31,7 +31,8 @@
         "job_title_fr": "D\u00e9veloppeur Web et Mobile",
         "contact_email": "clement.floret@protonmail.com",
         "avatar": "/src/static/img/avatar.webp",
-        "resume": "/src/static/files/CV_CLEMENT_FLORET.pdf",
+        "resume": "/src/static/files/CV_English.pdf",
+        "resume_fr": "src/static/files/CV_Français.pdf",
         "about_description": "After several years in the industrial sector, I decided to change careers and pursue my passion for IT, particularly development. To make my project a success, I undertook training and obtained the RNCP title of Web and Mobile Web Developer. Today, I am seeking to apply my skills as an application developer.",
         "about_description_fr": "Apr\u00e8s plusieurs ann\u00e9es dans le secteur industriel, j\u2019ai entam\u00e9 une reconversion afin de me tourner vers ma passion : l\u2019informatique et particuli\u00e8rement le d\u00e9veloppement. Pour mener \u00e0 bien mon projet, je me suis form\u00e9 et j\u2019ai obtenu le titre RNCP de D\u00e9veloppeur web et web mobile. Je souhaite aujourd\u2019hui mettre \u00e0 profit mes comp\u00e9tences et \u00e9voluer en tant que d\u00e9veloppeur d\u2019applications."
     }
