add meta for google search console

--- a/frontend/portfolio-react-app/index.html
+++ b/frontend/portfolio-react-app/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="robots" content="all">
+    <meta name="google-site-verification" content="fz-T-Ra8MymvlNn98yCPaMiau8QDDnZqTLkEw5GMSWY" />
     <link rel="alternate" hreflang="fr" href="https://clementfloret.dev/fr/" />
     <link rel="alternate" hreflang="en" href="https://clementfloret.dev/" />
     <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
