update npm and fix some issues

--- a/frontend/portfolio-react-app/index.html
+++ b/frontend/portfolio-react-app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -16,13 +16,13 @@
 
     <title>Clément Floret | Portfolio</title>
     <meta name="description"
-          content="Welcome to my online portfolio.
-          Discover my web and mobile projects, and my development skills.
-          Contact me to discuss new opportunities."/>
+          content="Bienvenue sur mon portfolio en ligne.
+          Découvrez mes projets web et mobile, et mes compétences en développement.
+          Contactez moi pour discuter de nouvelles opportunités."/>
 </head>
 <body>
 <div id="root"></div>
-<noscript>You need to enable JavaScript to run this app.</noscript>
+<noscript>Vous devez activer Javascript pour afficher cette page.</noscript>
 <script type="module" src="./src/main.jsx"></script>
 </body>
 </html>
